fixed spacing of items in navbar -fixed padding and gaps of navbar text -fullscreen and mobile navbar looks good!

--- a/src/components/navbar/toonNavbar.css
+++ b/src/components/navbar/toonNavbar.css
@@ -3,6 +3,7 @@
     height: 100vh;
     width: 100vw;
 }
+
 /* use this method for the moving text for the body */
 .panel {
     position: fixed;
@@ -38,13 +39,15 @@ header {
     flex-direction: row;
     padding: var(--padding-sm);
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
 }
 
 .logo-head {
-    padding: 1rem;
+    position: relative;
+    padding: 0rem;
     display: flex;
+
 }
 
 .nav-main {
@@ -62,7 +65,7 @@ header {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: var(--gap-sm);
+    gap: var(--gap-md);
     flex-grow: 1;
 }
 
@@ -71,7 +74,7 @@ header {
     justify-content: center;
     display: flex;
     flex-direction: row;
-    gap: var(--gap-sm);
+    gap: var(--gap-md);
 }
 
 .connect-wallet {
@@ -109,13 +112,15 @@ header {
     height: 1.5rem;
 }
 
-.closePanelWebView{
-    display: flex ;
+.closePanelWebView {
+    display: flex;
 }
+
 @media (max-width: 850px) {
-    .closePanelWebView{
-        display: none ;
+    .closePanelWebView {
+        display: none;
     }
+
     .nav-container {
         flex-direction: column;
         max-width: 100%;
@@ -127,7 +132,7 @@ header {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        
+
         width: 100%;
     }
 
@@ -202,7 +207,7 @@ header {
         position: relative;
         justify-content: center;
         padding-top: 2.5rem;
-      padding-bottom: 1.5rem;
+        padding-bottom: 1.5rem;
         display: flex;
         align-items: center;
     }
